@@ -1,78 +1,102 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2016.4   4.7   2.1.9  TBD (LTS)
-# PE 2016.5   4.8   2.1.9  2017-10-31
-# SIMP6.0.0   4.8   2.1.9  TBD
-# PE 2017.1   4.9   2.1.9  2017-10-31
-# PE 2017.2   4.10  2.1.9  TBD
+# Release       Puppet   Ruby   EOL
+# SIMP 6.2      4.10     2.1.9  TBD
+# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
+# PE 2017.3     5.3      2.4.4  2018-12-31
+# SIMP 6.3      5.5      2.4.4  TBD***
+# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# PE 2019.0     6.0      2.5.1  2019-08-31^^^
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
+# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
+
 ---
 language: ruby
 cache: bundler
 sudo: false
+
+stages:
+  - check
+  - spec
+  - name: deploy
+    if: 'fork = false AND tag = true'
 
 bundler_args: --without development system_tests --path .vendor
 
 notifications:
   email: false
 
+addons:
+  apt:
+    packages:
+      - rpm
+
 before_install:
   - rm -f Gemfile.lock
 
+global:
+  - STRICT_VARIABLES=yes
+
 jobs:
   allow_failures:
-    - env: PUPPET_VERSION="~> 5.0"
+    - name: 'Latest Puppet 6.x (allowed to fail)'
 
   include:
-
-    - stage: validate
-      rvm: 2.4.1
-      env: PUPPET_VERSION="~> 5"
+    - stage: check
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
         - bundle exec rake pkg:check_version
-        - bundle exec rake syntax
-        - bundle exec rake lint
         - bundle exec rake metadata_lint
         - bundle exec rake pkg:compare_latest_tag
         - bundle exec rake pkg:create_tag_changelog
+        - bundle exec rake lint
         - bundle exec puppet module build
 
-    - stage: validate
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.8"
-      script:
-        - bundle exec rake syntax
-        - bundle exec rake lint
-        - bundle exec rake metadata_lint
-
     - stage: spec
-      rvm: 2.4.1
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
+      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
       rvm: 2.1.9
       env: PUPPET_VERSION="~> 4.10.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.9.2"
+      name: 'Puppet 5.3 (PE 2017.3)'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.7.0"
+      rvm: 2.4.4
+      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="~> 5.5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 5.x'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 6.x (allowed to fail)'
+      rvm: 2.5.1
+      env: PUPPET_VERSION="~>6.0"
       script:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -92,6 +116,5 @@ jobs:
             secure: "A4iyZF2QK9mnFOljwe9/M/Z3hcwaIb2m6xX63CZDo+KlYRpD82ozE8W5xroYSFfiiJEARMYLJBqPBQmtp+tORqlneBPHATCxjEuEy2iOapPnVw+Wh2mWXWgCsjpog9OKjL/SHS3wcO1uQPRV3pR7Bf8duHc79kWYkSHgr6twGgjzG9T6xOWqt4W+Y4BZupeGDTD7MuR7RY9yt2i91IJjpdTjV5NAniOBeGKGtmFVtGus2Hye4LfuNdWcBzJucc9naT8lVobxTyc0qArCT9dVWRBU8cXfinR3E47bgbZ/75cqFN8ou+VxptehAkXQ5lSRG6OpHmZl7cdGHSnY/pDQMoZWYwd0qlnRm8zCVcVCPyXeTJXc6NNyLoSI1/e6toAzMf2qBuCG0AFRgkRPwXBZxmBMhcwzoy73O0sC5WnEb7Bwe8NUDcj76GUG6pv4fMF+PtuFIcA6JOknDGg1QyVMNA+Er2b8Uyklrrf4KrDMKUbD4NDcR/xMfxkt6lNSEQ7ut4LRy34YQA5xm1vChQpM5OtycNZxX7WQCpKvSWKl3II41XMxMO82E3AP3Ud4sGekWqB1Ln7XTnJ468tyFgQPrCMqBApW5KHNW4zDdQUABMnvtrAEtP0ldL7vMDbps+PqXzlYyD9jaU8PsUspR4+L6NfcBgyrmeOaHb8GTUfAGTs="
           on:
             tags: true
-            rvm: 2.4.1
             condition: '($SKIP_FORGE_PUBLISH != true)'
 
