@@ -1,12 +1,19 @@
+<%
+  if ENV['BEAKER_HYPERVISOR']
+    hypervisor = ENV['BEAKER_HYPERVISOR']
+  else
+    hypervisor = 'vagrant'
+  end
+-%>
+
 HOSTS:
   el7-system:
     roles:
-      - server
       - default
       - master
     platform:   el-7-x86_64
     box:        centos/7
-    hypervisor: vagrant
+    hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
         url: 'http://download.fedoraproject.org/pub/epel/7/$basearch'
@@ -18,7 +25,7 @@ HOSTS:
       - client
     platform:   el-6-x86_64
     box:        centos/6
-    hypervisor: vagrant
+    hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
         url: 'http://download.fedoraproject.org/pub/epel/6/$basearch'
@@ -29,4 +36,8 @@ CONFIG:
   log_level: verbose
   type:      aio
   vagrant_memsize: 256
+<% if ENV['BEAKER_PUPPET_COLLECTION'] -%>
+  puppet_collection: <%= ENV['BEAKER_PUPPET_COLLECTION'] %>
+<% end -%>
+
   # vb_gui: true
